--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
             android:text="Учить"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/learnBtn"
+            android:id="@+id/mainLoLearnBtn"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/searchBtn"
+            app:layout_constraintBottom_toTopOf="@+id/mainLoSearchBtn"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,9 +23,9 @@
             android:text="найти перевод"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/searchBtn"
-            app:layout_constraintTop_toBottomOf="@+id/learnBtn"
-            app:layout_constraintBottom_toTopOf="@+id/addBtn"
+            android:id="@+id/mainLoSearchBtn"
+            app:layout_constraintTop_toBottomOf="@+id/mainLoLearnBtn"
+            app:layout_constraintBottom_toTopOf="@+id/mainLoAddBtn"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,9 +35,9 @@
             android:text="добавить слова"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/addBtn"
+            android:id="@+id/mainLoAddBtn"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchBtn"
+            app:layout_constraintTop_toBottomOf="@+id/mainLoSearchBtn"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
