--- a/app/src/main/res/layout/add_lo.xml
+++ b/app/src/main/res/layout/add_lo.xml
@@ -9,13 +9,13 @@
               android:layout_height="wrap_content"
               android:text="слово"
               android:id="@+id/textView9"
-              app:layout_constraintBottom_toTopOf="@+id/add_lo_word"
+              app:layout_constraintBottom_toTopOf="@+id/addLoWord"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
               android:layout_marginBottom="4dp"/>
     <EditText android:layout_width="200dp"
               android:layout_height="wrap_content"
-              android:id="@+id/add_lo_word"
+              android:id="@+id/addLoWord"
               app:layout_constraintTop_toBottomOf="@+id/textView9"
               android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
@@ -23,13 +23,13 @@
               android:layout_height="wrap_content"
               android:text="перевод"
               android:id="@+id/textView12" android:layout_marginTop="18dp"
-              app:layout_constraintTop_toBottomOf="@+id/add_lo_word"
-              app:layout_constraintBottom_toTopOf="@+id/add_lo_trans" app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/addLoWord"
+              app:layout_constraintBottom_toTopOf="@+id/addLoTrans" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="8dp"/>
     <EditText android:layout_width="200dp"
               android:layout_height="wrap_content"
-              android:id="@+id/add_lo_trans"
+              android:id="@+id/addLoTrans"
               app:layout_constraintTop_toBottomOf="@+id/textView12"
               android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
@@ -37,12 +37,12 @@
               android:layout_height="wrap_content"
               android:text="толкование"
               android:id="@+id/textView10"
-              android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/add_lo_trans"
+              android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/addLoTrans"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
     <EditText android:layout_width="200dp"
               android:layout_height="wrap_content"
-              android:id="@+id/add_lo_interp"
+              android:id="@+id/addLoInterp"
               android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
@@ -51,13 +51,13 @@
             android:text="Добавить слово"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/add_lo_AddWord"
+            android:id="@+id/addLoAddWord"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="124dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/add_lo_interp"
+            app:layout_constraintTop_toBottomOf="@+id/addLoInterp"
             app:layout_constraintVertical_bias="1.0"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.9"/>
