--- a/app/src/main/res/layout/learn_lo.xml
+++ b/app/src/main/res/layout/learn_lo.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
     <TextView
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/l_lo_word" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/lLoWord"
+            android:layout_marginTop="60dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:textColor="@color/Q_word"
             android:textAlignment="center"
@@ -16,13 +21,13 @@
     <EditText
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/l_lo_answer"
+            android:id="@+id/lLoAnswer"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/l_lo_word"
+            app:layout_constraintTop_toBottomOf="@+id/lLoWord"
             android:textColor="@color/A_word_us"
             android:textAlignment="center"
             android:textSize="40dp"
@@ -30,9 +35,9 @@
     <TextView
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/l_lo_right_answer"
+            android:id="@+id/lLoRightAnswer"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/l_lo_answer"
+            app:layout_constraintTop_toBottomOf="@+id/lLoAnswer"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,26 +49,30 @@
             android:text="проверить"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/l_lo_check" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/l_lo_interp" android:layout_marginBottom="8dp"
+            android:id="@+id/lLoCheck" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/lLoInterp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintVertical_bias="0.828"/>
     <TextView
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/l_lo_interp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/l_lo_right_answer"
+            android:id="@+id/lLoInterp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/lLoRightAnswer"
             android:textColor="@color/Q_word_interpretation"
             android:textSize="15dp"/>
     <Button
             android:text="следующее слово"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/l_lo_nextWord" app:layout_constraintEnd_toStartOf="@+id/l_lo_check"
+            android:id="@+id/lLoNextWord" app:layout_constraintEnd_toStartOf="@+id/lLoCheck"
             android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/l_lo_interp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lLoInterp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.828"/>
 </android.support.constraint.ConstraintLayout>
