--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         tools:context=".MainActivity">
 
     <Button
-            android:text="Учить"
+            android:text="@string/learn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/mainLoLearnBtn"
@@ -20,7 +20,7 @@
             android:layout_marginEnd="8dp"
     />
     <Button
-            android:text="найти перевод"
+            android:text="@string/findTrans"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/mainLoSearchBtn"
@@ -32,7 +32,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.519"/>
     <Button
-            android:text="добавить слова"
+            android:text="@string/addWords"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/mainLoAddBtn"
