--- a/app/src/main/res/layout/add_lo.xml
+++ b/app/src/main/res/layout/add_lo.xml
@@ -7,7 +7,7 @@
 
     <TextView android:layout_width="200dp"
               android:layout_height="wrap_content"
-              android:text="слово"
+              android:text="@string/word"
               android:id="@+id/textView9"
               app:layout_constraintBottom_toTopOf="@+id/addLoWord"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -21,7 +21,7 @@
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
     <TextView android:layout_width="200dp"
               android:layout_height="wrap_content"
-              android:text="перевод"
+              android:text="@string/translate"
               android:id="@+id/textView12" android:layout_marginTop="18dp"
               app:layout_constraintTop_toBottomOf="@+id/addLoWord"
               app:layout_constraintBottom_toTopOf="@+id/addLoTrans" app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
     <TextView android:layout_width="200dp"
               android:layout_height="wrap_content"
-              android:text="толкование"
+              android:text="@string/interpretation"
               android:id="@+id/textView10"
               android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/addLoTrans"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -48,21 +48,17 @@
               android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="8dp"/>
     <Button
-            android:text="Добавить слово"
+            android:text="@string/addWord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/addLoAddWord"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="124dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/addLoInterp"
-            app:layout_constraintVertical_bias="1.0"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.9"/>
+    />
     <Button
-            android:text="назад"
+            android:text="@string/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/selectBtn"
